# Projects

./: .gitconfig  .gitignore  .screenrc  CPPLINT.cfg  README.md  migrate_p4_to_git.py  mirror_pip_packages.py  mirror_pip_packages_locally.py  mirror_pip_packages_version.py  vimrc
.config/nvim/: init.lua
.config/nvim/lua/: base-setup.lua  lualine-setup.lua  my_mason.lua  other-setup.lua  packer-setup.lua
.config/nvim/plugin/: packer_compiled.lua
.config/pipewire/: input-filter-chain.conf
.config/powerline-shell/: config.json
C++Evolution/C++11/: test_lambda_ranges.cpp  test_nullptr.cpp  test_rvalue_ref.cpp  testauto.cpp  testclass_deleted_default.cpp
CMakeExamples/: CMakeLists.txt  main.cpp
CMakeExamples/src/: main.cpp
Combinations/: 1.txt  CMakeLists.txt  Makefile  getcombinations.cpp  getcombinations.cpp_bkp  getcombinations.hpp
ModifiedMachfiles/zsh/: zsh-aliases  zsh-exports  zsh-prompt  zshrc
PythonPrograms/: data_classes.py  enum_classes.py  prettify_json.py  ssh_jump.py  typehint_test.py
RustPrograms/test_panic/src/: main.rs
Shellscripts/: TakeBackup.bash  TakeBackup.nu
aoc_2019/day1/: Makefile  day1.cpp  inp.txt
aoc_2019/day1.2/: .puzzle.txt.swp  Makefile  Utilities.h  day1.2.cpp  inp.txt  out.txt
aoc_2019/day10_1/: Makefile  day10_1.cpp  day10_1_bkp.cpp
aoc_2019/day10_2/: Makefile  Utilities.cpp  day10_2.cpp
aoc_2019/day11_1/: Makefile  day11_1.cpp  inp1.txt
aoc_2019/day12_1/: 1.txt  Makefile  day12_1.cpp  out.txt
aoc_2019/day12_2/: Makefile  day12_2.cpp
aoc_2019/day2/: Makefile  Utilities.h  day2.cpp  err.txt  inp1.txt
aoc_2019/day3/manhattan_puzzle/: Makefile  manhattan.cpp
aoc_2019/day3/manhattan_puzzle2/: manhattan.cpp  sum.txt
aoc_2019/day4/: Makefile  Utilities.cpp  day4.cpp
aoc_2019/day4_2/: Makefile  Utilities.cpp  day4_2.cpp  inp.txt
aoc_2019/day5/: Makefile  Utilities.cpp  Utilities.h  day5.cpp  inp1.txt
aoc_2019/day5_2/: Makefile  Utilities.cpp  day5_2.cpp  inp1.txt
aoc_2019/day6/: Makefile  Utilities.h  day6.cpp
aoc_2019/day6_2/: Makefile  day6_2.cpp
aoc_2019/day7/: Makefile  Utilities.h  day7.cpp
aoc_2019/day7_2/: Makefile  day7_2.cpp  inp1.txt
aoc_2019/day8_1/: Makefile  day8_1.cpp  out.txt
aoc_2019/day8_2/: Makefile  Utilities.cpp  day8_2.cpp  inp.txt  out.txt
aoc_2019/day9_1/: Makefile  Utilities.cpp  day9_1.cpp  inp1.txt
aoc_2019/day9_2/: Makefile  day9_2.cpp
aoc_2021/day1p1/: Makefile  day1p1.cpp
aoc_2021/day1p2/: Makefile  Utilities.cpp  day1p2.cpp
aoc_2021/day2p1/: Makefile  day2p1.cpp
aoc_2021/day2p2/: Makefile  Utilities.h  day2p2.cpp
aoc_2021/day3p1/: Makefile  day3p1.cpp
aoc_2021/day3p2/: Makefile  day3p2.cpp
aoc_2022/: README.md
aoc_2022/day1p1/: Makefile
aoc_2022/day1p1/src/: Utilities.h  main.cpp
aoc_2022/day1p2/: Makefile
aoc_2022/day1p2/src/: main.cpp
aoc_2022/day2p1/: CMakeLists.txt
aoc_2022/day2p1/src/: main.cpp
aoc_2022/day2p2/: default.nix
aoc_2022/day2p2/src/: Utilities.cpp  Utilities.h  main.cpp
aoc_2022/day3p1/: .ninja_deps  .ninja_log
aoc_2022/day3p1/src/: Utilities.cpp  Utilities.h  main.cpp
aoc_2022/day3p2/: CMakeLists.txt
aoc_2022/day3p2/src/: main.cpp
aoc_2022/day4p1/: .ninja_deps  .ninja_log
aoc_2022/day4p1/src/: Utilities.cpp  Utilities.h  main.cpp
aoc_2022/day4p2/src/: main.cpp
aoc_2022/day5p1/: CMakeLists.txt
aoc_2022/day5p1/src/: Utilities.cpp  Utilities.h  main.cpp
aoc_2022/day5p2/src/: Utilities.cpp  Utilities.h  (+1 more)
aoc_2022/day6p1/: .ninja_deps  .ninja_log
aoc_2022/day6p2/: .ninja_deps  .ninja_log  CMakeLists.txt  compile_commands.json
aoc_2022/day6p2/src/: Utilities.cpp  Utilities.h  main.cpp
aoc_2022/rust_impl/: README.md
aoc_2022/rust_impl/day1p2/: Cargo.toml
aoc_2022/rust_impl/day1p2/src/: main.rs
aoc_2022/rust_impl/day3p2/: Cargo.toml
aoc_2022/rust_impl/day3p2/src/: main.rs
concurrency/: CMakeLists.txt  Concurrent.cpp  Concurrent.h  DNSDetails.cpp  DNSDetails.h  FileDetails.cpp  FileDetails.h  Makefile  inp.txt  main.cpp  parallel_benchmark.txt  seq_benchmark.txt  test.cpp
concurrency/inc/: Concurrent.h  DNSDetails.h
concurrency/src/: Concurrent.cpp  DNSDetails.cpp  main.cpp
nvim/: init.vim
pytest_examples/: conftest.py  pytest.ini  report.html  test1.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py
rust_programs/: Cargo.toml  expression.rs  forloop.rs  forrange.rs  function.rs  hello.rs  ifelse.rs  slice.rs
rust_programs/src/: main.rs
rust_programs/test_argparse/: Cargo.toml
rust_programs/test_ascii/: Cargo.toml
rust_programs/test_enum/: Cargo.toml
rust_programs/test_hashmap/: Cargo.toml
rust_programs/test_lib/: Cargo.toml
rust_programs/test_threads/: Cargo.toml
zshrc/: .zshrc  mysorin.zsh-theme
(+30 files in other folders)
