cmake_minimum_required(VERSION 3.9.1)
project(helloworld)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -s -O3")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_library(Utilities SHARED Utilities.cpp)
add_executable(helloworld main.cpp)
target_link_libraries(helloworld fmt boost_program_options Utilities)
