cmake_minimum_required(VERSION 3.9.1)
project(getcombinations)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-Wall -s -O3")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(getcombinations getcombinations.cpp)
target_link_libraries(getcombinations fmt boost_program_options)
