cmake_minimum_required(VERSION 3.10)
project(getcombinations)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
if (CMAKE_BUILD_TYPE MATCHES Debug)
  set(CMAKE_CXX_FLAGS "-Wall -s -O3 -fprofile-arcs -ftest-coverage")
else()
  set(CMAKE_CXX_FLAGS "-Wall -s -O3")
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
add_executable(getcombinations getcombinations.cpp)
target_link_libraries(getcombinations fmt boost_program_options)
