cmake_minimum_required(VERSION 3.9.1)
set(PROJECT_NAME "DnsLoadTest")
project(${PROJECT_NAME})
option(USE_CLANG "build application with clang" OFF)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(PROJECT_INC_DIR "inc")
set(CMAKE_CXX_FLAGS "-Wall -s -O3")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_executable(${PROJECT_NAME} "src/main.cpp" "src/Concurrent.cpp" "src/DNSDetails.cpp")
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INC_DIR})
target_link_libraries(${PROJECT_NAME} fmt boost_program_options pthread)
