cmake_minimum_required(VERSION 3.9.1)
project(aoc2022)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-Wall -s -O3")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_library(Utilities SHARED src/Utilities.cpp)
add_executable(aoc2022 src/main.cpp)
target_link_libraries(aoc2022 fmt boost_program_options Utilities)
