cmake_minimum_required(VERSION 3.9.1)
set(PROJECT_NAME "aoc2022")
project(${PROJECT_NAME})
option(USE_CLANG "build application with clang" OFF)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
set(PROJECT_INC_DIR "inc")
set(CMAKE_CXX_FLAGS "-Wall -s -O3")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
add_library(Utilities SHARED src/Utilities.cpp)
target_include_directories(Utilities PRIVATE ${PROJECT_INC_DIR})
add_executable(${PROJECT_NAME} "src/main.cpp")
target_include_directories(${PROJECT_NAME} PRIVATE ${PROJECT_INC_DIR})
target_link_libraries(${PROJECT_NAME} fmt boost_program_options Utilities)
